--- a/src/MultiAlign/Windows/Viewers/LoadingAnalysisView.xaml
+++ b/src/MultiAlign/Windows/Viewers/LoadingAnalysisView.xaml
@@ -14,49 +14,53 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="50*"/>
+            <RowDefinition Height="64"/>
+            <RowDefinition Height="50*"/>
         </Grid.RowDefinitions>
         <Image
-            Width="24"
-            Grid.Column="0"
-            VerticalAlignment="Bottom"
-            HorizontalAlignment="Center" Source="/MultiAlign;component/Resources/molecule.png">
+            Width="24" Grid.Row="1"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Center" Source="/MultiAlign;component/Resources/molecule.png" Margin="36,4,36,0">
 
         </Image>
         <Image
             Width="28"
+            Grid.Row="1"
             Grid.Column="1"
-            VerticalAlignment="Bottom"
+            VerticalAlignment="Center"
             HorizontalAlignment="Center" Source="/MultiAlign;component/Resources/MainIcon.png">
 
         </Image>
         <Image
+            
+            Grid.Row="1"
             Height="32"
             Grid.Column="2"
-            VerticalAlignment="Bottom"
+            VerticalAlignment="Center"
             HorizontalAlignment="Center" Source="/MultiAlign;component/Resources/AlignmentIcon.png">
 
         </Image>
         <Image
             Height="48"
+            Grid.Row="1"
             Grid.Column="3"
-            VerticalAlignment="Bottom"
+            VerticalAlignment="Center"            
             HorizontalAlignment="Center" Source="/MultiAlign;component/Resources/tag-32.png">
 
         </Image>
         <Label     
-            FontSize="24"
+            FontSize="32"
             FontWeight="Bold"
             Margin="5"
-            VerticalAlignment="Top"
+            Foreground="Black"
+            VerticalAlignment="Center"
             HorizontalContentAlignment="Center"
             VerticalContentAlignment="Center"
-            Grid.Row="1"
+            Content="{Binding Status}"
+            Grid.Row="0"            
             Grid.ColumnSpan="4"
-            Grid.Column="0">
-            Loading...
-        </Label>
+            Grid.Column="0"/>
         
     </Grid>
 </UserControl>
